# argus-edge-sdk

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: arduino.yml  ci.yml
deploy/compose/: .env.example  docker-compose.dev.yml  mqtt-test.sh  otp-test.sh
deploy/compose/tools/: mk-passwd.sh
dev/: .env  .env.example  docker-compose.yml  init-mqtt.sh  mqtt-test.sh
dev/mock-auth/: Cargo.toml  Dockerfile
dev/mock-auth/src/: handlers.rs  lib.rs  main.rs  types.rs
dev/mock-auth/tests/: http.rs
dev/mock-sink/: Cargo.toml  Dockerfile
dev/mock-sink/src/: handlers.rs  main.rs  types.rs
dev/mosquitto/: mosquitto.conf
dev/tools/: mk-passwd.sh
docs/: architecture.md  contributing.md  getting-started.md  mqtt-topics.md  ota.md
firmware/arduino/examples/device_auth_mqtt/: README.md  device_auth_mqtt.ino
firmware/arduino/examples/publish_hello_world/: publish_hello_world.ino
services/: Cargo.toml
services/mock-auth/: Cargo.toml  Dockerfile
services/mock-auth/src/: handlers.rs  lib.rs  main.rs  types.rs
services/mock-auth/tests/: http.rs  otp.rs
services/mock-auth/tests/otp/: cases.rs
services/mock-ota/: Cargo.toml  Dockerfile
services/mock-ota/src/: main.rs
services/mock-ota/tests/: mod.rs
services/mock-sink/: .dockerignore  Cargo.toml  Dockerfile
services/mock-sink/src/: handlers.rs  main.rs  types.rs
