[package]
name = "mock-sink"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = "0.24"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
