[package]
name = "mock-ota"
version = "0.1.0"
edition = "2024"
autotests = false

[dependencies]
axum = { version = "0.7", features = ["macros", "http1", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rumqttc = { version = "0.24", features = ["use-rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace", "request-id"] }
dotenvy = "0.15"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
