[package]
name = "mock-sink"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "http1", "json"] }
rumqttc = { version = "0.24", features = ["use-rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
anyhow = "1"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["trace", "request-id"] }
